/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.eva2_14_figuras_polimorfismo;

/**
 *
 * @author jesus
 */
public abstract class Figura implements Datos {
    public abstract double calcularArea();
    public abstract double calcularPerimetro();
}
